# jevois_controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy_to_jv.sh  json_examples.txt  launch-host.sh  launch-platform.sh  my_usbsd_start.sh  rebuild-host.sh  rebuild-platform.sh
Headers/: altitudecontroller.h  altitudeestimator.h  conductor.h  def.h  lateralestimator.h  my_enums.h  pidcontroller.h  waypointselector.h
Ransac_test/: CMakeLists.txt  ransac_test.cpp
Sources/: altitudecontroller.cpp  altitudeestimator.cpp  conductor.cpp  lateralestimator.cpp  main.cpp  pidcontroller.cpp  waypointselector.cpp
Tests/: CMakeLists.txt  test.cpp
ransac_test/: CMakeLists.txt  build_test.sh  ransac_test.cpp
